<resources>
    <string name="AccessibilityDeviceDvr">dvr</string>
    <string name="AccessibilityDeviceName">device name</string>
    <string name="AccessibilityDevicePercentage">%d percent used.</string>
    <string name="AccessibilityDeviceRename">rename</string>
    <string name="AccessibilityDeviceSelected">selected</string>
    <string name="AccessibilityDeviceStb">receiver</string>
    <string name="DevPrefActivityConfig">Use Activity Config</string>
    <string name="DevPrefAnalyticsV2EnabledTitle">V2 Enabled</string>
    <string name="DevPrefBooleanFalse">FALSE</string>
    <string name="DevPrefBooleanTrue">TRUE</string>
    <string name="DevPrefCapabilitiesUrlDefault">/api/smarttv/user/capabilities/v2</string>
    <string name="DevPrefEASTitle">EAS</string>
    <string name="DevPrefEGServiceUrl_Dev">http://eg-staging01-play.osg.cloud.twc.net:80/api/v4/events</string>
    <string name="DevPrefEGServiceUrl_Prod">http://eg.timewarnercable.com:80/api/v4/events</string>
    <string name="DevPrefEventGatewayServerUrlDefault">http://eg.timewarnercable.com:80/api/v4/events</string>
    <string name="DevPrefEventGatewayServiceCallReportingLevelAll">All</string>
    <string name="DevPrefEventGatewayServiceCallReportingLevelFailuresOnly">Failures</string>
    <string name="DevPrefEventGatewayServiceCallReportingLevelNone">None</string>
    <string name="DevPrefExolayerType">EXOPLAYERV2</string>
    <string name="DevPrefHardcodedStreamUrl">http://24.24.127.138/dav/VOD/NBCU2014042500000784/vod_urlenc.m3u8</string>
    <string name="DevPrefIpVideoTrialAppNameDefault">IPTV-Trial</string>
    <string name="DevPrefIpVideoTrialCodeDefault">EQROKUCUST</string>
    <string name="DevPrefIpVideoTrialServiceUrlDefault">/api/smarttv/info/v1/ipvideotrial</string>
    <string name="DevPrefLiveTvChannelChangerIntervalSecDefault">5</string>
    <string name="DevPrefRootPIDefault">@string/DevPrefRootPI_prod</string>
    <string name="DevPrefRootPI_pi_sit_a">https://apis.shared.uat-spectrum.net</string>
    <string name="DevPrefRootPI_pi_sit_b">https://apis-vid.shared.qa-spectrum.net</string>
    <string name="DevPrefRootPI_prod">https://apis-vid.spectrum.net</string>
    <string name="DevPrefVenonaDevelopModeTitle">Develop mode</string>
    <string name="DevPrefVenonaEnabledTitle">Enabled</string>
    <string name="DevPrefVenonaEndpointTitle">Endpoint</string>
    <string name="DevPrefVenonaEventsApiTitle">api</string>
    <string name="DevPrefVenonaEventsDisplays">external display</string>
    <string name="DevPrefVenonaEventsErrorTitle">error</string>
    <string name="DevPrefVenonaEventsLoginTitle">login</string>
    <string name="DevPrefVenonaEventsModalView">modalView</string>
    <string name="DevPrefVenonaEventsPageViewTitle">pageView</string>
    <string name="DevPrefVenonaEventsPlaybackTitle">playback</string>
    <string name="DevPrefVenonaEventsPurchase">purchase</string>
    <string name="DevPrefVenonaEventsSearchTitle">search</string>
    <string name="DevPrefVenonaEventsSelect">select</string>
    <string name="DevPrefVenonaEventsUserConfigSetTitle">userConfigSet</string>
    <string name="DevPrefVenonaFlushSizeTitle">Flush size</string>
    <string name="DevPrefVenonaHeartbeatTitle">Heartbeat</string>
    <string name="DevPrefVenonaLoggingTitle">Debug logging</string>
    <string name="DevPrefVenonaMessageSizeTitle">Message size</string>
    <string name="DevPrefVenonaQueueSizeTitle">Queue size</string>
    <string name="DevPrefVenonaRequestTimeoutTitle">Request timeout</string>
    <string name="DevPrefVenonaStorageSizeTitle">Storage Size</string>
    <string name="DevPrefVenonaVisitIdSummary">Overrides Visit Id</string>
    <string name="DevPrefVenonaVisitIdTitle">Visit Id</string>
    <string name="DevPrefVideoAbrPolicyAggressive">AGGRESSIVE</string>
    <string name="DevPrefVideoAbrPolicyConservative">CONSERVATIVE</string>
    <string name="DevPrefVideoAbrPolicyDefault">@string/DevPrefVideoAbrPolicyModerate</string>
    <string name="DevPrefVideoAbrPolicyModerate">MODERATE</string>
    <string name="DevPreferenceCdvrEnabledTitle">Enable cDVR</string>
    <string name="DevPreferenceChromecastEnabledTitle">Enable Chromecast</string>
    <string name="DevPreferenceFeedbackDisabled">Feedback Disabled</string>
    <string name="DevPreferenceFeedbackEnabled">Feedback Enabled</string>
    <string name="DevPreferenceFeedbackTitle">Toggle Feedback</string>
    <string name="DevPreferenceMuteButtonOnLiveTVDisabled">Live TV Mute Button Disabled</string>
    <string name="DevPreferenceMuteButtonOnLiveTVEnabled">Live TV Mute Button Enabled</string>
    <string name="DevPreferenceMuteButtonOnLiveTVTitle">Toggle Live TV Mute Button</string>
    <string name="DevPreferenceNullNielsenOptOutUrl">Force Null Nielsen Opt-Out URL</string>
    <string name="DevPreferenceOneAppDisabled">One App Disabled</string>
    <string name="DevPreferenceOneAppEnabled">One App Enabled</string>
    <string name="DevPreferenceOneAppTitle">Toggle One App Feature Flag</string>
    <string name="DevPreferenceSppLoginErrorDisabled">SPP Login Error Disabled</string>
    <string name="DevPreferenceSppLoginErrorEnabled">SPP Login Error Enabled</string>
    <string name="DevPreferenceSppLoginErrorTitle">Toggle SPP Login Error Feature Flag</string>
    <string name="DevPreferenceTvodDisabled">Tvod Disabled</string>
    <string name="DevPreferenceTvodEnabled">Tvod Enabled</string>
    <string name="DevPreferenceTvodPlaybackOnlyDisabled">Tvod Rent and Play</string>
    <string name="DevPreferenceTvodPlaybackOnlyEnabled">Tvod Playback Only</string>
    <string name="DevPreferenceTvodPlaybackOnlyTitle">Toggle Tvod Playback Only</string>
    <string name="DevPreferenceTvodTitle">Toggle Tvod</string>
    <string name="EASPingPongIntervalTitle">EAS Ping Pong Interval (in seconds)</string>
    <string name="GuideChannelDialogAddFavorites">Add to Favorites</string>
    <string name="GuideChannelDialogClose">Close</string>
    <string name="GuideChannelDialogNetworkSchedule">Network Schedule</string>
    <string name="GuideChannelDialogRemoveFavorites">Remove from Favorites</string>
    <string name="GuideDateTimeDialogGetListings">Go to Listings</string>
    <string name="NEW">NEW</string>
    <string name="PREF_ALLOW_PICTURE_IN_PICTURE">PREF_ALLOW_PICTURE_IN_PICTURE</string>
    <string name="PREF_ALLOW_VIDEO_WITH_PROXY">PREF_ALLOW_VIDEO_WITH_PROXY</string>
    <string name="PREF_ALLOW_VIDEO_WITH_USB_DEBUG">PREF_ALLOW_VIDEO_WITH_USB_DEBUG</string>
    <string name="PREF_AUTOPLAY_COUNTDOWN_SECONDS">autoPlayCountDownSeconds</string>
    <string name="PREF_AUTOPLAY_MIN_COUNTDOWN_SECONDS">autoPlayMinimumCountDownSeconds</string>
    <string name="PREF_AUTOPLAY_PREFETCH_ENABLED">autoPlayPrefetchEnabled</string>
    <string name="PREF_CAPABILITIES_URL">capabilitiesUrl</string>
    <string name="PREF_CDVR_PLAYER_TYPE">PREF_CDVR_PLAYER_TYPE</string>
    <string name="PREF_CHROME_CAST_APP_ID">chromeCastReceiverAppId</string>
    <string name="PREF_CHROME_CAST_PASSWORD">chromeCastPassword</string>
    <string name="PREF_CHROME_CAST_USERNAME">chromeCastUsername</string>
    <string name="PREF_CHROME_CAST_USE_CUSTOM_URL">chromeCastUseCustomUrl</string>
    <string name="PREF_CONFIG_CDVR_ENABLED">cdvrEnabled</string>
    <string name="PREF_CONFIG_FAVORITES_SYNCED">favoritesSynced</string>
    <string name="PREF_CONFIG_FEEDBACK">customerFeedbackEnabled</string>
    <string name="PREF_CONFIG_ONE_APP">oneAppEnabled</string>
    <string name="PREF_CONFIG_SPP_LOGIN_ERROR">sppLoginErrorEnabled</string>
    <string name="PREF_CONFIG_TVOD">tvodEnabled</string>
    <string name="PREF_CONFIG_TVOD_PLAYBACK_ONLY">tvodPlaybackOnlyEnabled</string>
    <string name="PREF_DISABLE_AUTOPLAY_COUNT_RESET">disableAutoPlayCountReset</string>
    <string name="PREF_DISABLE_HOSTNAME_VERIFICATION">PREF_DISABLE_HOSTNAME_VERIFICATION</string>
    <string name="PREF_DISPLAY_VIDEO_INFO">PREF_DISPLAY_VIDEO_INFO</string>
    <string name="PREF_EAS_PING_PONG_INTERVAL">easPingPongInterval</string>
    <string name="PREF_ENABLE_CHROME_CAST">chromeCastEnabled</string>
    <string name="PREF_ENABLE_ESSENTIALS_PACKAGE_VIEW_ALL">autoViewAllEnabledForEssentialsPackage</string>
    <string name="PREF_ENABLE_LOCATION_POLLING">PREF_ENABLE_LOCATION_POLLING</string>
    <string name="PREF_ENABLE_NETWORK_LOGGING">enableNetworkLogging</string>
    <string name="PREF_ENABLE_OFFLINE_GRACE_PERIOD">PREF_ENABLE_OFFLINE_GRACE_PERIOD</string>
    <string name="PREF_FEATURE_ENABLED_AUTOPLAY">autoPlayFeatureEnabled</string>
    <string name="PREF_FORCE_L3">PREF_FORCE_L3</string>
    <string name="PREF_GET_GUIDE_V4_MAX_TMS_GUIDE_IDS">getGuideMaxTmsGuideIds</string>
    <string name="PREF_GET_GUIDE_V4_PERIOD_DURATION">getGuidePeriodDurationInHours</string>
    <string name="PREF_HARDCODED_STREAM_URL">PREF_HARDCODED_STREAM_URL</string>
    <string name="PREF_HEADEND_TIME_ZONE">useHeadendTime</string>
    <string name="PREF_IP_VIDEO_TRIAL_APP_NAME">ipVideoTrialAppName</string>
    <string name="a_to_z">A - Z</string>
    <string name="android">Android</string>
    <string name="auto_access_info_accessibility_close">Close dialog, button</string>
    <string name="auto_access_info_accessibility_header">Sign in automatically, heading level 1.</string>
    <string name="auto_access_info_accessibility_logo">Auto Sign in, image.</string>
    <string name="auto_access_info_close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_button">Cancel</string>
    <string name="cast">Chromecast</string>
    <string name="closed_captions_audio">AUDIO</string>
    <string name="closed_captions_subtitles">SUBTITLES</string>
    <string name="continueText">Continue</string>
    <string name="dvr_date_recorded">Date Recorded</string>
    <string name="guideChannelDialogWatchHere">Watch in App</string>
    <string name="guideChannelDialogWatchOnTv">Watch on TV</string>
    <string name="manual_sign_in_auto">Sign In Automatically</string>
    <string name="masterAccountPassword">Master Account Password</string>
    <string name="ok_button">OK</string>
    <string name="priority">Priority</string>
    <string name="recorded">Recorded</string>
    <string name="resetPIN">Reset PIN</string>
    <string name="resetPinPasswordHeaderText">To reset your Parental Controls PIN, please enter your master account password.</string>
    <string name="scheduled">Scheduled</string>
    <string name="search">Search</string>
    <string name="series_manager">Series Manager</string>
    <string name="settings">Settings</string>
    <string name="settingsFeedbackCategoryHeader">What’s the best way to describe your issue?</string>
    <string name="settingsFeedbackSourceAppNameHeader">On what device were you using Spectrum TV?</string>
    <string name="settingsFeedbackUserInfoHint">Add additional comments or details.</string>
    <string name="settingsLiveTvHistory">Live TV History</string>
    <string name="settingsOnDemandClearHistory">Clear</string>
    <string name="settingsOnDemandHistory">On Demand History</string>
    <string name="settingsSearchHistory">Search History</string>
    <string name="sign_in_automatically_info">You can sign in automatically if you’re connected to your Spectrum Internet service.</string>
    <string name="timeFormat_dayOfWeekMonthDayOfMonth">EEEE MMMM d</string>
    <string name="timeFormat_hourMinuteAmPm">hh:mma</string>
    <string name="timeFormat_monthNameDay">MMMM d</string>
    <string name="tvodChooseAPinText">Enter a four-digit PIN:</string>
    <string name="tvodInvalidPassword">The password you entered doesn’t match our records. Please try again.</string>
    <string name="tvodNotForSetTopBoxText">This PIN is only used on the Spectrum TV App.</string>
    <string name="tvodPinMessage">"We'll ask for your PIN when you rent a movie."</string>
    <string name="validatingPasswordText">Signing you in…</string>
</resources>