<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/gray4" android:paddingLeft="20.0dip" android:paddingTop="20.0dip" android:paddingRight="20.0dip" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/cross_icon" android:background="@android:color/transparent" android:layout_width="20.0dip" android:layout_height="20.0dip" android:contentDescription="@string/auto_access_info_accessibility_close" app:srcCompat="@drawable/ic_x" />
    <ImageView android:id="@id/auto_access_icon" android:focusable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="60.0dip" android:layout_centerHorizontal="true" android:contentDescription="@string/auto_access_info_accessibility_logo" app:srcCompat="@drawable/ic_auto_access" />
    <TextView android:textAppearance="?H2" android:textColor="?darkBlue1" android:gravity="center" android:id="@id/auto_access_header" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:text="@string/manual_sign_in_auto" android:layout_below="@id/auto_access_icon" android:layout_centerHorizontal="true" android:contentDescription="@string/auto_access_info_accessibility_header" />
    <TextView android:textAppearance="?H5" android:textColor="?darkBlue1" android:gravity="center" android:id="@id/auto_access_message" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/sign_in_automatically_info" android:layout_below="@id/auto_access_header" android:layout_centerHorizontal="true" android:lineSpacingExtra="3.0sp" />
    <Button android:textAppearance="?H3" android:textColor="?blue3" android:gravity="center" android:id="@id/close_button" android:background="@android:color/transparent" android:layout_width="100.0dip" android:layout_height="40.0dip" android:layout_marginTop="20.0dip" android:layout_marginBottom="20.0dip" android:text="@string/auto_access_info_close" android:layout_below="@id/auto_access_message" android:layout_centerHorizontal="true" android:contentDescription="@string/auto_access_info_accessibility_close" />
</RelativeLayout>
