<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:theme="@style/KiteDarkTheme" android:orientation="vertical" android:paddingTop="20.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:paddingStart="20.0dip" android:paddingEnd="20.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.charter.kite.KiteCheckbox android:id="@id/checkboxClearOnDemand" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settingsOnDemandHistory" />
    <com.charter.kite.KiteCheckbox android:id="@id/checkboxClearLiveTv" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/settingsLiveTvHistory" />
    <com.charter.kite.KiteCheckbox android:id="@id/checkboxClearSearch" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/settingsSearchHistory" />
    <com.charter.kite.KiteButtonSecondary android:enabled="false" android:id="@id/clearHistoryButton" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:text="@string/settingsOnDemandClearHistory" android:layout_marginStart="30.0dip" android:layout_marginEnd="30.0dip" />
</LinearLayout>
