<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/guide_channel_dialog" android:background="?gray4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="330.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.appcompat.widget.AppCompatImageView android:id="@id/closeIcon" android:padding="20.0dip" android:layout_width="60.0dip" android:layout_height="60.0dip" />
    <com.twc.android.ui.utils.UrlImageView android:layout_gravity="center" android:id="@id/guideChannelDialogIcon" android:layout_width="230.0dip" android:layout_height="173.0dip" android:layout_marginTop="-35.0dip" android:scaleType="fitCenter" />
    <TextView android:textAppearance="?H4" android:textColor="?gray2" android:layout_gravity="center" android:id="@id/callSignValue" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="30.0dip" />
    <Button android:id="@id/guideChannelDialogWatchHereButton" android:layout_marginBottom="20.0dip" android:text="@string/guideChannelDialogWatchHere" style="@style/GuideChannelActionStyle" />
    <Button android:id="@id/guideChannelDialogWatchOnTvButton" android:layout_marginBottom="20.0dip" android:text="@string/guideChannelDialogWatchOnTv" style="@style/GuideChannelActionStyle" />
    <Button android:id="@id/guideChannelDialogNetworkButton" android:layout_marginBottom="20.0dip" android:text="@string/GuideChannelDialogNetworkSchedule" style="@style/GuideChannelActionStyle" />
    <Button android:id="@id/guideChannelDialogMakeFavoriteButton" android:text="@string/GuideChannelDialogAddFavorites" style="@style/GuideChannelActionStyle" />
    <TextView android:textAppearance="?H3" android:textColor="?blue3" android:gravity="center" android:layout_gravity="center" android:id="@id/closeText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="75.0dip" android:layout_marginBottom="15.0dip" android:minHeight="48.0dip" android:text="@string/GuideChannelDialogClose" />
</LinearLayout>
