<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/toolbarContainer" layout="@layout/toolbar" />
    <LinearLayout android:orientation="vertical" android:id="@id/createPinLayout" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/toolbarContainer">
        <TextView android:textAppearance="?H4" android:gravity="center_horizontal" android:id="@id/headerText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="10.0dip" android:text="@string/tvodPinMessage" />
        <TextView android:textAppearance="?H4" android:gravity="center" android:id="@id/createPINText" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:text="@string/tvodChooseAPinText" android:layout_below="@id/headerText" />
        <EditText android:textSize="40.0sp" android:gravity="center_horizontal" android:id="@id/pinEditText" android:background="@drawable/edit_text_bgrd" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="40.0dip" android:layout_marginBottom="20.0dip" android:maxLength="4" android:inputType="numberPassword" />
        <TextView android:textAppearance="?H4" android:gravity="center_horizontal" android:id="@id/notForSetTopBoxText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/tvodNotForSetTopBoxText" />
    </LinearLayout>
    <RelativeLayout android:gravity="center_horizontal" android:id="@id/resetPinLayout" android:paddingBottom="20.0dip" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="10.0dip" android:layout_below="@id/toolbarContainer">
        <TextView android:textAppearance="?H4" android:gravity="center_horizontal" android:id="@id/passwordHeaderText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/resetPinPasswordHeaderText" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
        <TextView android:textAppearance="?H4" android:id="@id/passwordText" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:text="@string/masterAccountPassword" android:layout_below="@id/passwordHeaderText" android:layout_centerHorizontal="true" />
        <TextView android:textAppearance="?H4" android:textColor="@android:color/holo_red_light" android:id="@id/invalidPassword" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tvodInvalidPassword" android:layout_below="@id/passwordText" android:layout_centerHorizontal="true" />
        <EditText android:textAppearance="?H4" android:gravity="center_horizontal" android:id="@id/passwordEditText" android:background="@drawable/edit_text_bgrd" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:layout_marginTop="40.0dip" android:layout_marginRight="40.0dip" android:layout_below="@id/passwordText" android:inputType="textPassword">
            <requestFocus />
        </EditText>
        <Button android:gravity="center" android:id="@id/resetPinButton" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="400.0dip" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/resetPIN" android:layout_below="@id/passwordEditText" android:layout_centerHorizontal="true" style="@style/TwcButtonStyle" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/progressBarLayout" android:background="@color/TWCBlackTranslucent" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <com.twc.android.ui.widget.SpectrumProgressBar android:id="@id/progressBar" android:layout_width="48.0dip" android:layout_height="48.0dip" android:indeterminate="true" android:layout_centerInParent="true" />
        <TextView android:textAppearance="?H4" android:id="@id/validatingPinText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/validatingPasswordText" android:layout_below="@id/progressBar" android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <LinearLayout android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip">
        <Button android:gravity="center" android:id="@id/cancelButton" android:layout_width="0.0dip" android:layout_height="50.0dip" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:text="@string/cancel" android:layout_weight="1.0" style="@style/TwcButtonStyle" />
        <Button android:enabled="false" android:gravity="center" android:layout_width="0.0dip" android:layout_height="50.0dip" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:text="@string/continueText" android:layout_weight="1.0" style="@style/TwcButtonStyle" />
    </LinearLayout>
</RelativeLayout>
