<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:theme="@style/SpectrumKiteDarkTheme" android:background="@color/gray4" android:paddingBottom="14.0dip" android:layout_width="@dimen/chromecast_cc_dialog_width" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.tabs.TabLayout android:id="@id/castCCDialogTabLayout" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent" app:tabSelectedTextColor="@color/kite_dark_blue_30" app:tabTextAppearance="@style/Widget.Kite.TextView.Caption" app:tabTextColor="@color/kite_gray_30">
        <com.google.android.material.tabs.TabItem android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/closed_captions_subtitles" />
        <com.google.android.material.tabs.TabItem android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/closed_captions_audio" />
    </com.google.android.material.tabs.TabLayout>
    <RadioGroup android:id="@id/castCCDialogTextTracks" android:layout_width="fill_parent" android:layout_height="wrap_content" android:divider="@color/kite_light_blue_10" android:showDividers="middle" app:layout_constraintTop_toBottomOf="@id/castCCDialogTabLayout" />
    <RadioGroup android:id="@id/castCCDialogAudioTracks" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:divider="@color/kite_light_blue_10" android:showDividers="middle" app:layout_constraintTop_toBottomOf="@id/castCCDialogTextTracks" />
    <TextView android:textColor="@color/kite_blue_10" android:id="@id/castCCDialogOkButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="14.0dip" android:layout_marginRight="14.0dip" android:text="@string/ok_button" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/castCCDialogAudioTracks" style="@style/Widget.Kite.Button.Borderless" />
    <TextView android:textColor="@color/kite_blue_10" android:id="@id/castCCDialogCancelButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel_button" android:textAllCaps="true" app:layout_constraintRight_toLeftOf="@id/castCCDialogOkButton" app:layout_constraintTop_toTopOf="@id/castCCDialogOkButton" style="@style/Widget.Kite.Button.Borderless" />
</androidx.constraintlayout.widget.ConstraintLayout>
